fix mobile overflow

--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -45,6 +45,7 @@ div.left {}
 
 main {
     padding: 0.5em;
+    overflow-x: hidden;
 }
 
 div.right {}
